testcases/semantic/invalid/if.rs
fn main() {
    let a: bool = if (true) { 2 } else { 6};
    exit(0);
}
